vezba5/zadatak2/synsem.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 $@2: %empty

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

    7 type: _TYPE

    8 parameter: %empty
    9          | type _ID

   10 body: _LBRACKET variable_list statement_list _RBRACKET

   11 variable_list: %empty
   12              | variable_list variable

   13 variable: type _ID _SEMICOLON

   14 statement_list: %empty
   15               | statement_list statement

   16 statement: compound_statement
   17          | assignment_statement
   18          | if_statement
   19          | return_statement
   20          | inc_statement

   21 compound_statement: _LBRACKET statement_list _RBRACKET

   22 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   23 num_exp: exp
   24        | num_exp _AROP exp

   25 exp: literal
   26    | _ID
   27    | _ID _INC
   28    | function_call
   29    | _LPAREN num_exp _RPAREN

   30 literal: _INT_NUMBER
   31        | _UINT_NUMBER

   32 $@3: %empty

   33 function_call: _ID $@3 _LPAREN argument _RPAREN

   34 argument: %empty
   35         | num_exp

   36 inc_statement: _ID _INC _SEMICOLON

   37 if_statement: if_part
   38             | if_part _ELSE statement

   39 if_part: _IF _LPAREN rel_exp _RPAREN statement

   40 rel_exp: num_exp _RELOP num_exp

   41 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 7
_IF (259) 39
_ELSE (260) 38
_RETURN (261) 41
_ID (262) 6 9 13 22 26 27 33 36
_INT_NUMBER (263) 30
_UINT_NUMBER (264) 31
_LPAREN (265) 6 29 33 39
_RPAREN (266) 6 29 33 39
_LBRACKET (267) 10 21
_RBRACKET (268) 10 21
_ASSIGN (269) 22
_SEMICOLON (270) 13 22 36 41
_AROP (271) 24
_RELOP (272) 40
_INC (273) 27 36
ONLY_IF (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
program (21)
    on left: 1, on right: 0
function_list (22)
    on left: 2 3, on right: 1 3
function (23)
    on left: 6, on right: 2 3
$@1 (24)
    on left: 4, on right: 6
$@2 (25)
    on left: 5, on right: 6
type (26)
    on left: 7, on right: 6 9 13
parameter (27)
    on left: 8 9, on right: 6
body (28)
    on left: 10, on right: 6
variable_list (29)
    on left: 11 12, on right: 10 12
variable (30)
    on left: 13, on right: 12
statement_list (31)
    on left: 14 15, on right: 10 15 21
statement (32)
    on left: 16 17 18 19 20, on right: 15 38 39
compound_statement (33)
    on left: 21, on right: 16
assignment_statement (34)
    on left: 22, on right: 17
num_exp (35)
    on left: 23 24, on right: 22 24 29 35 40 41
exp (36)
    on left: 25 26 27 28 29, on right: 23 24
literal (37)
    on left: 30 31, on right: 25
function_call (38)
    on left: 33, on right: 28
$@3 (39)
    on left: 32, on right: 33
argument (40)
    on left: 34 35, on right: 33
inc_statement (41)
    on left: 36, on right: 20
if_statement (42)
    on left: 37 38, on right: 18
if_part (43)
    on left: 39, on right: 37 38
rel_exp (44)
    on left: 40, on right: 39
return_statement (45)
    on left: 41, on right: 19


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    7 type: _TYPE .

    $default  reduce using rule 7 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    6 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    6 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    6 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 10


State 10

    6 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 8 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    9 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    6 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 14


State 13

    9 parameter: type _ID .

    $default  reduce using rule 9 (parameter)


State 14

    6 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 15


State 15

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 16

    body  go to state 17


State 16

   10 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 11 (variable_list)

    variable_list  go to state 18


State 17

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 6 (function)


State 18

   10 body: _LBRACKET variable_list . statement_list _RBRACKET
   12 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 14 (statement_list)

    type            go to state 19
    variable        go to state 20
    statement_list  go to state 21


State 19

   13 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 22


State 20

   12 variable_list: variable_list variable .

    $default  reduce using rule 12 (variable_list)


State 21

   10 body: _LBRACKET variable_list statement_list . _RBRACKET
   15 statement_list: statement_list . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 27

    statement             go to state 28
    compound_statement    go to state 29
    assignment_statement  go to state 30
    inc_statement         go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 22

   13 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 35


State 23

   39 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 36


State 24

   41 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 41
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 25

   22 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON
   36 inc_statement: _ID . _INC _SEMICOLON

    _ASSIGN  shift, and go to state 45
    _INC     shift, and go to state 46


State 26

   21 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 47


State 27

   10 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 10 (body)


State 28

   15 statement_list: statement_list statement .

    $default  reduce using rule 15 (statement_list)


State 29

   16 statement: compound_statement .

    $default  reduce using rule 16 (statement)


State 30

   17 statement: assignment_statement .

    $default  reduce using rule 17 (statement)


State 31

   20 statement: inc_statement .

    $default  reduce using rule 20 (statement)


State 32

   18 statement: if_statement .

    $default  reduce using rule 18 (statement)


State 33

   37 if_statement: if_part .
   38             | if_part . _ELSE statement

    _ELSE  shift, and go to state 48

    $default  reduce using rule 37 (if_statement)


State 34

   19 statement: return_statement .

    $default  reduce using rule 19 (statement)


State 35

   13 variable: type _ID _SEMICOLON .

    $default  reduce using rule 13 (variable)


State 36

   39 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 49
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44
    rel_exp        go to state 50


State 37

   26 exp: _ID .
   27    | _ID . _INC
   33 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _INC  shift, and go to state 51

    _LPAREN   reduce using rule 32 ($@3)
    $default  reduce using rule 26 (exp)

    $@3  go to state 52


State 38

   30 literal: _INT_NUMBER .

    $default  reduce using rule 30 (literal)


State 39

   31 literal: _UINT_NUMBER .

    $default  reduce using rule 31 (literal)


State 40

   29 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 53
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 41

   24 num_exp: num_exp . _AROP exp
   41 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 54
    _AROP       shift, and go to state 55


State 42

   23 num_exp: exp .

    $default  reduce using rule 23 (num_exp)


State 43

   25 exp: literal .

    $default  reduce using rule 25 (exp)


State 44

   28 exp: function_call .

    $default  reduce using rule 28 (exp)


State 45

   22 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 56
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 46

   36 inc_statement: _ID _INC . _SEMICOLON

    _SEMICOLON  shift, and go to state 57


State 47

   15 statement_list: statement_list . statement
   21 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 58

    statement             go to state 28
    compound_statement    go to state 29
    assignment_statement  go to state 30
    inc_statement         go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 48

   38 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26

    statement             go to state 59
    compound_statement    go to state 29
    assignment_statement  go to state 30
    inc_statement         go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 49

   24 num_exp: num_exp . _AROP exp
   40 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 55
    _RELOP  shift, and go to state 60


State 50

   39 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 61


State 51

   27 exp: _ID _INC .

    $default  reduce using rule 27 (exp)


State 52

   33 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 62


State 53

   24 num_exp: num_exp . _AROP exp
   29 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 63
    _AROP    shift, and go to state 55


State 54

   41 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 41 (return_statement)


State 55

   24 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    exp            go to state 64
    literal        go to state 43
    function_call  go to state 44


State 56

   22 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   24 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 65
    _AROP       shift, and go to state 55


State 57

   36 inc_statement: _ID _INC _SEMICOLON .

    $default  reduce using rule 36 (inc_statement)


State 58

   21 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 21 (compound_statement)


State 59

   38 if_statement: if_part _ELSE statement .

    $default  reduce using rule 38 (if_statement)


State 60

   40 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    num_exp        go to state 66
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44


State 61

   39 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26

    statement             go to state 67
    compound_statement    go to state 29
    assignment_statement  go to state 30
    inc_statement         go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 62

   33 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 37
    _INT_NUMBER   shift, and go to state 38
    _UINT_NUMBER  shift, and go to state 39
    _LPAREN       shift, and go to state 40

    $default  reduce using rule 34 (argument)

    num_exp        go to state 68
    exp            go to state 42
    literal        go to state 43
    function_call  go to state 44
    argument       go to state 69


State 63

   29 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 29 (exp)


State 64

   24 num_exp: num_exp _AROP exp .

    $default  reduce using rule 24 (num_exp)


State 65

   22 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 22 (assignment_statement)


State 66

   24 num_exp: num_exp . _AROP exp
   40 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 55

    $default  reduce using rule 40 (rel_exp)


State 67

   39 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 39 (if_part)


State 68

   24 num_exp: num_exp . _AROP exp
   35 argument: num_exp .

    _AROP  shift, and go to state 55

    $default  reduce using rule 35 (argument)


State 69

   33 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 70


State 70

   33 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 33 (function_call)
